Fix size on small devices

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,21 @@
 body {
   max-width: 37em;
-  font-size: 19px;
+  font-size: 16px;
   line-height: 1.4;
   margin: 0 auto;
 }
+
+@media (min-width: 400px) {
+  body {
+    font-size: 19px;
+  }
+}
+
+#content {
+  margin: 0 1rem;
+}
+
+
 
 .title {
   margin: 25vh 0;
